@@ -29,7 +29,7 @@ import _afimages
 from _afproducttree import *
 import afinfo
 import afconfig
-import afresource, _afsettingsview
+import afresource, _afsettingsview, _afhtmlwindow
 
 
 class MainFrame(wx.Frame):
@@ -331,6 +331,9 @@ class MainFrame(wx.Frame):
         menu.Append(901, _('About ...'), _('Info about this program'))
         self.Bind(wx.EVT_MENU, self.OnAbout, id = 901)
         menu.Enable(901, True)
+        menu.Append(902, _('Feedback ...'), _('How to give feedback about this program'))
+        self.Bind(wx.EVT_MENU, self.OnFeedback, id = 902)
+        menu.Enable(902, True)
         menuBar.Append(menu, _('&Help'))
 
         self.SetMenuBar(menuBar)
@@ -377,6 +380,24 @@ class MainFrame(wx.Frame):
         info.Description = wordwrap(info.Description, 350, wx.ClientDC(self))
         info.License = wordwrap(info.Licence, 500, wx.ClientDC(self))
         wx.AboutBox(info)
+        
+    
+    def OnFeedback(self, evt):
+        dlg = wx.Dialog(self, -1, _('How to give feedback'), style=wx.DEFAULT_DIALOG_STYLE | wx.RESIZE_BORDER )
+        size = dlg.GetSize()
+        dlg.SetMinSize(size)
+        size = (int(size[0]*1.5), int(size[1]*1.5))
+        dlg.SetSize(size)
+        info = wx.AboutDialogInfo()
+        info = afinfo.getInfo(info)
+        htmlwin = _afhtmlwindow.afHtmlWindow(dlg, -1)
+        htmlwin.SetPage(info.feedback)
+        sizer = dlg.CreateStdDialogButtonSizer(wx.OK)
+        vsizer = wx.BoxSizer(wx.VERTICAL)
+        vsizer.Add(htmlwin, 1, wx.EXPAND | wx.ALL, 5)
+        vsizer.Add(sizer, 0, wx.EXPAND | wx.ALL, 5)
+        dlg.SetSizer(vsizer)
+        dlg.ShowModal()
 
 
     def OnSettings(self, evt):
